@@ -6,9 +6,9 @@ Maintainer: Jan Wijffels <jwijffels@bnosac.be>
 Author: c(person("Jan", "Wijffels", role = c("aut", "cre", "cph"), email =
     "jwijffels@bnosac.be"), person("BNOSAC", role = "cph"))
 License: GPL-3
-Version: 1.0
+Version: 1.1
 URL: https://github.com/bnosac/spark.sas7bdat
-Date: 2016-11-17
+Date: 2016-11-28
 VignetteBuilder: knitr
 Imports:
     sparklyr (>= 0.3)
